--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.1"
     defaultConfig {
-        applicationId "com.example.andrearizzo.todolist"
+        applicationId "by.wink.todolist"
         minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
