--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
     defaultConfig {
-        applicationId "by.wink.todolist"
-        minSdkVersion 22
+        applicationId "com.example.andrearizzo.todolist"
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
